--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "@trpc/next": "^10.37.1",
     "@trpc/react-query": "^10.37.1",
     "@trpc/server": "^10.37.1",
+    "@types/swagger-ui-react": "^4.18.3",
     "next": "^14.0.0",
+    "next-swagger-doc": "^0.4.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "superjson": "^1.13.1",
+    "swagger-ui-react": "^5.9.4",
     "zod": "^3.22.4"
   },
   "devDependencies": {
