--- a/package.json
+++ b/package.json
@@ -16,10 +16,14 @@
     "@trpc/react-query": "^10.37.1",
     "@trpc/server": "^10.37.1",
     "@types/swagger-ui-react": "^4.18.3",
+    "core-js": "^3.33.2",
+    "mobx": "^6.11.0",
     "next": "^14.0.0",
     "next-swagger-doc": "^0.4.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "redoc": "^2.1.3",
+    "styled-components": "^6.1.1",
     "superjson": "^1.13.1",
     "swagger-ui-react": "^5.9.4",
     "zod": "^3.22.4"
